update:更新需求文档

--- a/Iteration_1/需求文档.md
+++ b/Iteration_1/需求文档.md
@@ -199,15 +199,19 @@ OASIS: （Online grAph System for acdemIcS）学术关系图谱系统
 
 ##  **7.8  扩展性需求**
 
- 【提示：可扩展性需求：反映软件适应“变化”的能力。在软件开发过程中，“变化”是不可避免的，如需求、设计的变化，算法的改进，程序的变化等。所以，软件设计等需适应“变化”。可扩展性是系统设计阶段重点考虑的质量属性】
+Scalability1: 系统可以自由进行副本数据的添加
+
+Scalability1: 论文的添加、数据删改需要支持灵活的变更
 
 ##  **7.9  易用性需求**
 
- 【提示：针对用户需求，描述产品在快捷、简易、清晰、用户友好等方面的质量需求】
+Usability1：系统布局要合理，方便用户找到所需功能，同时设置初次使用引导功能方便用户上手操作。
+Usability2：系统显示各种论文的信息，或者用户、账户的信息时，行距要为1倍或以上行距，方便看清各种信息。
+Usability3：系统要对重点信息（论文题目、概要等）突出显示，方便用户确认。
+Usability4：系统应针对不同的终端屏幕尺寸展示出不同界面，提高用户的体验度。
 
 # **8   附录**
 
-【提示：若有其他附件，请列出】
-
- 本文档附录包含行业识别映射表、相关指数模型文档、数据字典、数据分析、公式计算模型文档等等
+1. 产品采用响应式界面设计，保证在不同分辨率浏览器上运行
+2. 主要功能采用基于WebKit的WebView技术，也就是浏览器技术，能够在不同配置的设备上运行，具有比较好的可移植性
 
