--- a/Iteration_1/需求文档.md
+++ b/Iteration_1/需求文档.md
@@ -68,15 +68,13 @@ OASIS: （Online grAph System for acdemIcS）学术关系图谱系统
 
 ## **5.1  功能清单**
 
-
-
 ## **5.2  模块1-查询**
 
 模块功能描述：
 
 提供查询入口，使用户可以通过查询关键字或其组合查找目标论文。
 
-### **5.2.1  功能1-用户登录**
+### **5.2.1  功能1-单一关键词搜索**
 
 | 用例编号       | UC1-1                                                    |
 | -------------- | -------------------------------------------------------- |
@@ -101,15 +99,33 @@ OASIS: （Online grAph System for acdemIcS）学术关系图谱系统
 | 用例名称       | 组合关键词搜索                                               |
 | 创建者         | 王雪君                                                       |
 | 创建日期       | 2020-02-18                                                   |
-| 最后一次更新者 | 王雪君                                                       |
-| 更新日期       | 2020-02-18                                                   |
+| 最后一次更新者 | 濮宗悦                                                       |
+| 更新日期       | 2020-02-26                                                   |
 | 参与者         | 普通用户                                                     |
 | 触发条件       | 不修改搜索类型/选定搜索类型为ALL                             |
 | 前置条件       | 无                                                           |
 | 后置条件       | 无                                                           |
 | 优先级         | 高                                                           |
 | 正常流程       | 用户输入一个或多个关键词，用空格隔开。点击搜索按钮。系统展示搜索结果的论文及附加信息 |
-| 扩展流程       | 2.附加搜索2.a 用户在附加搜索框中输入进一步搜索的信息。2.b 系统展示在原结果中附加搜索的结果。 |
+| 扩展流程       | 1. 返回的搜索结果要附带上产生结果数（即若有n篇论文的作者包含A，A的结果数就是n）最多的前十位作者（可以少于十位，但不能超过十位）2. 返回的搜索结果要附带上产生结果数最多的五个机构/会议（细节定义同上） 3. 返回的搜索结果要附带上产生结果数最多的十个关键词（细节定义同上） |
+| 特殊需求       | 无                                                           |
+
+### 5.2.3  功能3-二次搜索
+
+| 用例编号       | UC1-3                                                        |
+| -------------- | ------------------------------------------------------------ |
+| 用例名称       | 二次搜索                                                     |
+| 创建者         | 濮宗悦                                                       |
+| 创建日期       | 2020-02-26                                                   |
+| 最后一次更新者 | 濮宗悦                                                       |
+| 更新日期       | 2020-02-26                                                   |
+| 参与者         | 普通用户                                                     |
+| 触发条件       | 在结果页面的侧边栏继续进行二次搜索                           |
+| 前置条件       | 已经得到一次搜索结果                                         |
+| 后置条件       | 无                                                           |
+| 优先级         | 高                                                           |
+| 正常流程       | 用户已经通过查询关键词A得到一个结果，在侧边栏操作得到另一个搜索关键词B（具体见扩展流程），确认搜索后实际结果等价于一次搜索中使用关键词A + B |
+| 扩展流程       | 1.可以在侧边栏里的搜索框输入得到关键词B 2. 可以通过在侧边栏指定时间区间得到关键词B 3.可以通过进一步指定作者/机构/关键词（参见UC1-2的扩展流程）得到关键词B |
 | 特殊需求       | 无                                                           |
 
 ## **5.3  模块2-展示**
