update：增加需求文档中可靠性、安全性、可兼容性需求

--- a/Iteration_1/需求文档.md
+++ b/Iteration_1/需求文档.md
@@ -174,28 +174,29 @@ OASIS: （Online grAph System for acdemIcS）学术关系图谱系统
 
 
 
-##  **7.4  健壮性需求**
+##  **7.4  可靠性需求**
 
- 【提示：可靠性是指在一定的环境下，在给定的时间内，系统不发生故障的概率，通常用平均无故障时间MTBF来衡量，如系统需避免“千年虫”、“内存泄露”、“误差累积”等问题，时隐时现的错误一般都属于可靠性问题，纠错的代价很高】
+Reliability1：系统每年非计划宕机时间不能超过3小时
+
+Reliability2：系统要能够采用适当的方法检测并发现故障
+
+Reliability3：系统出现故障时，能够在30分钟内恢复并正常使用
 
 ##  **7.5  安全性需求**
 
- 如：
+Security1：系统要确保服务器上的数据一致性
 
-- 系统操作过程中要保证对数据操纵的准确性、完整性、安全性和一致性。
-- 在数据传输中应该采取相应的加密/解密技术，保证传输中数据不丢失、不失真、不被窃取、不被撰改。尤其是从互联网访问数据时，要保证数据的安全性。同时，当一段时间内用户没有操作时，系统自动断开连接。
-- 在数据存储方面，需要将数据存储在相对安全的硬件设备上，需要对存储的数据进行定期备份，备份数据可以依照需要进行恢复；数据备份和程序备份要分开进行。
-- 业务人员的数据访问权限和IT维护人员的数据管理权限要分离，即业务与技术分离；另外，同一个用户不能同时拥有业务权限和技术管理权限。
-- 具有灵活的权限设置功能，系统管理员可以根据需要在功能层面为每个用户分配数据查询、修改等权限。
-- 要求具有对权限设置进行检查的功能，将权限设置和对权限设置的检查分不同角色实现，有检查权限设置功能的角色用户不能设置用户权限。
+Security2：使用加密的数据传输协议，保证传输中数据不丢失、不失真、不被窃取、不被撰改
+
+Security3：数据需要存储在相对安全的硬件设备上，并对存储的数据进行定期备份
 
 ##  **7.6  可移植性需求**
 
- 【提示：可移植性是指：软件运行于不同软硬件环境的能力，编程语言越低级，其程序越难移植，反之则容易。如：利用开发平台提供的数据转换功能，可以实现跨平台数据转换，实现不同数据库数据间的数据转换，如：FoxPro、Access、Microsoft SQL Server间的数据转换。】
+前端无
 
 ##  **7.7  兼容性需求**
 
- 【提示，兼容性需求：是指两个或两个以上的软件相互交换信息的能力。如：中国联通和中国移动的手机互联互通、金山软件公司的WPS与微软的Word可相互打开、支持的浏览器版本和名称等】
+Compatibility1：系统能够在各大主流浏览器上使用，包括IE、Firefox、Google Chrome、Safari、Opera
 
 ##  **7.8  扩展性需求**
 
