--- a/Iteration_1/需求文档.md
+++ b/Iteration_1/需求文档.md
@@ -156,13 +156,16 @@ OASIS: （Online grAph System for acdemIcS）学术关系图谱系统
 
 ## **6.1  系统接口**
 
-​	 [提示：此节描述该系统与其他系统之间是否存在调用关系。]
+- 本系统依赖IEEE获取最基本的源数据
+
 
 ## **6.2  硬件接口**
 
- 	[提示：此节描述系统与硬件是否存在关系。]
+ 无
 
 ##  **6.3  其它接口**
+
+无
 
 #  **7   非功能性需求**
 
