--- a/Iteration_1/需求文档.md
+++ b/Iteration_1/需求文档.md
@@ -56,9 +56,17 @@ OASIS: （Online grAph System for acdemIcS）学术关系图谱系统
 
 # **4  业务处理流程**
 
-## **4.1  流程1-XX流程**
+## **4.1  流程1-查询流程**
 
-​	 
+- 刺激：用户在主搜索入口输入要搜索内容
+- 响应：系统返回搜索结果和按规则排序的前十条作者、关键词信息以及前五条发布组织信息
+- 刺激：用户进行二次搜索：（可叠加）
+  - 用户输入二次查询需要的信息
+  - 用户改变指定的年份区间
+  - 用户选择具体的作者
+  - 用户选择具体的关键词
+  - 用户选择具体的发布组织
+- 响应：系统返回二次搜索的结果
 
 ## **4.2  流程2-XX提示流程**
 
@@ -118,15 +126,15 @@ OASIS: （Online grAph System for acdemIcS）学术关系图谱系统
 | 创建者         | 濮宗悦                                                       |
 | 创建日期       | 2020-02-26                                                   |
 | 最后一次更新者 | 濮宗悦                                                       |
-| 更新日期       | 2020-02-26                                                   |
+| 更新日期       | 2020-02-29                                                   |
 | 参与者         | 普通用户                                                     |
 | 触发条件       | 在结果页面的侧边栏继续进行二次搜索                           |
 | 前置条件       | 已经得到一次搜索结果                                         |
 | 后置条件       | 无                                                           |
 | 优先级         | 高                                                           |
-| 正常流程       | 用户已经通过查询关键词A得到一个结果，在侧边栏操作得到另一个搜索关键词B（具体见扩展流程），确认搜索后实际结果等价于一次搜索中使用关键词A + B |
-| 扩展流程       | 1.可以在侧边栏里的搜索框输入得到关键词B <br />2. 可以通过在侧边栏指定时间区间得到关键词B<br />3.可以通过进一步指定作者/机构/关键词（参见UC1-2的扩展流程）得到关键词B |
-| 特殊需求       | 无                                                           |
+| 正常流程       | 用户已经通过查询关键词A得到一个结果，在侧边栏操作得到搜索附加关键词B1,B2...Bn,C1,C2....Cn,....（一个字母代表一个维度，字母相同下标不同代表一个维度下的不同内容。具体获取方法见扩展流程），确认搜索后实际结果等价于一次搜索中使用关键词A AND （B1 or B2 or ... or Bn）AND (C1 or C2 or ... or Cn) AND... |
+| 扩展流程       | 1.可以在侧边栏里的搜索框输入得到一个维度的关键词 <br />2. 可以通过在侧边栏指定时间区间得到一个维度的关键词<br />3.可以通过进一步指定作者/机构/关键词（参见UC1-2的扩展流程）得到一个维度的关键词 |
+| 特殊需求       | 二次搜索后附加信息不会改变。若再次进行二次搜索，是基于第一次搜索的基础上。 |
 
 ## **5.3  模块2-展示**
 
