--- a/Iteration_1/需求文档.md
+++ b/Iteration_1/需求文档.md
@@ -9,7 +9,7 @@
 | 版本编号 | 日期      | 参与人员               | 修改内容 | 备注 |
 | -------- | --------- | ---------------------- | -------- | ---- |
 | V0.1     | 2020.2.18 | 濮宗悦、丁玲燕、王雪君 | 构建草稿 | 无   |
-|          |           |                        |          |      |
+| V0.2     | 2020.2.29 | 陆放明                 | 补充接口 |      |
 |          |           |                        |          |      |
 
 # **1  引言**
@@ -168,7 +168,7 @@ OASIS: （Online grAph System for acdemIcS）学术关系图谱系统
 | 前置条件       | 无                                                           |
 | 后置条件       | 无                                                           |
 | 优先级         | 高                                                           |
-| 正常流程       | 用户点击“报表展示”按钮系统展示预设好的各类统计数据图<br />1. 论文总数折线图<br />2. 被引用论文数最多作者TOP10的堆叠柱状图（包含作者被引用数最多的前5篇论文的名字、引用数和PDF link）<br />3. 被引用数最多的论文TOP10的环装图（包含其标题、作者、引用数、PDF link）<br />4. 年度热门方向（词及热度）的词云 |
+| 正常流程       | 用户点击“报表展示”按钮系统展示预设好的各类统计数据图<br />1. 论文总数折线图<br />2. 被引用论文数最多作者TOP10的堆叠柱状图（包含作者被引用数最多的前5篇论文的名字、引用数和PDF link）<br />3. 被引用数最多的论文TOP10的环装图（包含其标题、作者、引用数、PDF link , year）<br />4. 年度热门方向（词及热度）的词云 |
 | 扩展流程       | 2a.  用户点击某项统计数据的具体部分    <br />1. 系统展示具体数据 |
 | 特殊需求       | 无                                                           |
 
@@ -178,14 +178,10 @@ OASIS: （Online grAph System for acdemIcS）学术关系图谱系统
 
 - 本系统依赖IEEE获取最基本的源数据
 
+##  **6.2  其它接口**
 
-## **6.2  硬件接口**
+- 系统需要能够及时响应外界的扩展变化
 
- 无
-
-##  **6.3  其它接口**
-
-无
 
 #  **7   非功能性需求**
 
@@ -194,20 +190,18 @@ OASIS: （Online grAph System for acdemIcS）学术关系图谱系统
 - 输入完网址后，进入应用系统的时间不应超过3～5妙。
 - 输入搜索内容后，从提交到相应得到搜索结果的平均时间不应超过10s，平均时间应在2~3秒。
 - 在用户第一次使用本系统时，在使用搜索、切换关键词和二次搜索功能时，寻找和理解的时间不应超过3秒。
-- 在预计的高峰负载条件下（最大并发用户数为500），10%处理器能力和15%系统可用内存留出备用，偶然情况下处理器满负荷（100%）运行时间不超过30秒。==？？？==
-- 系统在更新或者重大维护时，不可用时间不超过==？？？==
+- 在预计的高峰负载条件下（最大并发用户数为500），10%处理器能力和15%系统可用内存留出备用，偶然情况下处理器满负荷（100%）运行时间不超过30秒。
+- 系统在更新或者重大维护时，不可用时间不超过十分钟
 
 ## **7.2  数据管理能力需求**
 
- 【提示：说明需要管理记录的个数、表和文卷的大小规模，要按可预见的增长对数据及其分量的存储要求作出估算】
-
-1.  系统记录icse和ase近5年从IEEE官网导出的论文简要数据，==？？？？==
+1.  系统记录icse和ase近5年从IEEE官网导出的论文简要数据
 
 ##  **7.3  软硬件环境需求**
 
 | 硬件环境       | 阿里云学生服务器：<br />CPU ：单核<br />内存：2G<br />硬盘：40GB<br /> |
 | -------------- | ------------------------------------------------------------ |
-| 软件环境       | 后台操作系统Ubuntu（前台采用浏览器，对操作系统没有特别要求，支持用户使用Windows2003、windows7+、MacOS、Linux发行版等主流操作系统）<br />编程工具：java+==？？？tomcat==+vue全家桶+v-chart<br />数据库：MySQL |
+| 软件环境       | 后台操作系统Ubuntu（前台采用浏览器，对操作系统没有特别要求，支持用户使用Windows2003、windows7+、MacOS、Linux发行版等主流操作系统）<br />编程工具：java+ docker +vue全家桶+v-chart<br />数据库：MySQL |
 | 浏览器及分辨率 | 浏览器：支持IE9+、chrome50+、Firefox45+及其兼容浏览器<br />分辨率：1024×768,1366×768,1280×800,1280×1024，1440×900,1600×900，1920×1080 |
 
 ##  **7.4  可靠性需求**
