update：柱状图需求

--- a/Iteration_1/需求文档.md
+++ b/Iteration_1/需求文档.md
@@ -73,7 +73,7 @@ OASIS: （Online grAph System for acdemIcS）学术关系图谱系统
 - 刺激：用户在主页中点击Ranking button
 - 响应：系统跳转至Ranking页面，显示
     - 论文总数折线图
-    - 被引用论文数最多作者TOP10的堆叠柱状图（包含作者被引用数最多的前5篇论文的名字、引用数和PDF link）
+    - 被引用论文数最多和论文数最多作者TOP5的堆叠柱状图（包含作者被引用数最多的前5篇论文的名字、引用数和PDF link）
     - 被引用数最多的论文TOP10的环状图（包含其标题、作者、引用数、PDF link）
     - 年度热门方向（词及热度）的词云
 - 刺激：用户将鼠标移动至图表的某一部分
@@ -168,7 +168,7 @@ OASIS: （Online grAph System for acdemIcS）学术关系图谱系统
 | 前置条件       | 无                                                           |
 | 后置条件       | 无                                                           |
 | 优先级         | 高                                                           |
-| 正常流程       | 用户点击“报表展示”按钮系统展示预设好的各类统计数据图<br />1. 论文总数折线图<br />2. 被引用论文数最多作者TOP10的堆叠柱状图（包含作者被引用数最多的前5篇论文的名字、引用数和PDF link）<br />3. 被引用数最多的论文TOP10的环装图（包含其标题、作者、引用数、PDF link , year）<br />4. 年度热门方向（词及热度）的词云 |
+| 正常流程       | 用户点击“报表展示”按钮系统展示预设好的各类统计数据图<br />1. 论文总数折线图<br />2. 被引用论文数最多和论文数最多作者TOP5的堆叠柱状图（包含作者被引用数最多的前5篇论文的名字、引用数和PDF link）<br />3. 被引用数最多的论文TOP10的环装图（包含其标题、作者、引用数、PDF link , year）<br />4. 年度热门方向（词及热度）的词云 |
 | 扩展流程       | 2a.  用户点击某项统计数据的具体部分    <br />1. 系统展示具体数据 |
 | 特殊需求       | 无                                                           |
 
