--- a/Iteration_2/项目启动文档.md
+++ b/Iteration_2/项目启动文档.md
@@ -6,9 +6,10 @@
 
 ### 0. 版本变更记录
 
-| 时间       | 变更内容      | 负责人 |
-| ---------- | ------------- | ------ |
-| 2020-02-17 | 文档初稿 V1.0 | 陆放明 |
+| 时间       | 变更内容                             | 负责人 |
+| ---------- | ------------------------------------ | ------ |
+| 2020-02-17 | 文档初稿 V1.0                        | 陆放明 |
+| 2020-02-20 | 文档分工叙述<br>基本项目计划制定完成 | 陆放明 |
 
 ### 1. 项目总体业务价值和目标
 
@@ -102,23 +103,14 @@
 | 前端编码与测试           | 王雪君、丁玲燕、濮宗悦 |
 | 后台服务、运维、回归测试 | 陆放明                 |
 
-### 6. RACI矩阵
+### 6. 交付方式
 
-|      | 陆放明 | 王雪君 | 丁玲燕 | 濮宗悦 |
-| ---- | ------ | ------ | ------ | ------ |
-|      |        |        |        |        |
-|      |        |        |        |        |
-|      |        |        |        |        |
-|      |        |        |        |        |
-
-### 7. 交付方式
-
-#### 7.1 部署
+#### 6.1 部署
 
 - 采用 *jenkins*进行持续集成与持续发布
 - 基于微服务架构，云端采用 `docker`进行容器化集成
 
-#### 7.2 交付
+#### 6.2 交付
 
 - 开发阶段均以`dev`分支作为基准开发，`master`分支更新后自动进行`CI`
 - 每一个开发版本进行单独`tag`标记，发布于`github`的**release**上
