--- a/Iteration_2/需求规格说明书.md
+++ b/Iteration_2/需求规格说明书.md
@@ -200,6 +200,170 @@ OASIS: （Online grAph System for acdemIcS）学术关系图谱系统
 | 扩展流程       | 2a.  用户点击某项统计数据的具体部分    <br />1. 系统展示具体数据 |
 | 特殊需求       | 无                                                           |
 
+## 4.5 模块4-画像展示
+
+### 4.5.1 功能1-领域画像
+
+### 
+
+| 用例编号       | UC1-1                                                        |
+| -------------- | ------------------------------------------------------------ |
+| 名称           | 数据初始化                                                   |
+| 创建者         | 丁玲燕                                                       |
+| 创建日期       | 2020-03-07                                                   |
+| 最后一次更新者 | 丁玲燕                                                       |
+| 更新日期       | 2020-03-07                                                   |
+| 参与者         | 管理员                                                       |
+| 触发条件       | 进入管理员界面                                               |
+| 前置条件       | 无                                                           |
+| 后置条件       | 无                                                           |
+| 优先级         | 高                                                           |
+| 正常流程       | 1. 管理员进入管理员界面<br />2. 管理员选择初始化数据<br />3. 系统进行数据的初始化 |
+| 扩展流程       | 无                                                           |
+| 特殊需求       | 无                                                           |
+
+### 4.5.2 功能2-学者画像
+
+### 
+
+| 用例编号       | UC1-1                                                        |
+| -------------- | ------------------------------------------------------------ |
+| 名称           | 数据初始化                                                   |
+| 创建者         | 丁玲燕                                                       |
+| 创建日期       | 2020-03-07                                                   |
+| 最后一次更新者 | 丁玲燕                                                       |
+| 更新日期       | 2020-03-07                                                   |
+| 参与者         | 管理员                                                       |
+| 触发条件       | 进入管理员界面                                               |
+| 前置条件       | 无                                                           |
+| 后置条件       | 无                                                           |
+| 优先级         | 高                                                           |
+| 正常流程       | 1. 管理员进入管理员界面<br />2. 管理员选择初始化数据<br />3. 系统进行数据的初始化 |
+| 扩展流程       | 无                                                           |
+| 特殊需求       | 无                                                           |
+
+### 4.5.3 功能3-机构画像
+
+### 
+
+| 用例编号       | UC1-1                                                        |
+| -------------- | ------------------------------------------------------------ |
+| 名称           | 数据初始化                                                   |
+| 创建者         | 丁玲燕                                                       |
+| 创建日期       | 2020-03-07                                                   |
+| 最后一次更新者 | 丁玲燕                                                       |
+| 更新日期       | 2020-03-07                                                   |
+| 参与者         | 管理员                                                       |
+| 触发条件       | 进入管理员界面                                               |
+| 前置条件       | 无                                                           |
+| 后置条件       | 无                                                           |
+| 优先级         | 高                                                           |
+| 正常流程       | 1. 管理员进入管理员界面<br />2. 管理员选择初始化数据<br />3. 系统进行数据的初始化 |
+| 扩展流程       | 无                                                           |
+| 特殊需求       | 无                                                           |
+
+### 4.5.4 功能4-会议画像
+
+### 
+
+| 用例编号       | UC1-1                                                        |
+| -------------- | ------------------------------------------------------------ |
+| 名称           | 数据初始化                                                   |
+| 创建者         | 丁玲燕                                                       |
+| 创建日期       | 2020-03-07                                                   |
+| 最后一次更新者 | 丁玲燕                                                       |
+| 更新日期       | 2020-03-07                                                   |
+| 参与者         | 管理员                                                       |
+| 触发条件       | 进入管理员界面                                               |
+| 前置条件       | 无                                                           |
+| 后置条件       | 无                                                           |
+| 优先级         | 高                                                           |
+| 正常流程       | 1. 管理员进入管理员界面<br />2. 管理员选择初始化数据<br />3. 系统进行数据的初始化 |
+| 扩展流程       | 无                                                           |
+| 特殊需求       | 无                                                           |
+
+## 4.6 模块5-实体排序
+
+### 4.6.1 功能1-领域实体排序
+
+### 
+
+| 用例编号       | UC1-1                                                        |
+| -------------- | ------------------------------------------------------------ |
+| 名称           | 数据初始化                                                   |
+| 创建者         | 丁玲燕                                                       |
+| 创建日期       | 2020-03-07                                                   |
+| 最后一次更新者 | 丁玲燕                                                       |
+| 更新日期       | 2020-03-07                                                   |
+| 参与者         | 管理员                                                       |
+| 触发条件       | 进入管理员界面                                               |
+| 前置条件       | 无                                                           |
+| 后置条件       | 无                                                           |
+| 优先级         | 高                                                           |
+| 正常流程       | 1. 管理员进入管理员界面<br />2. 管理员选择初始化数据<br />3. 系统进行数据的初始化 |
+| 扩展流程       | 无                                                           |
+| 特殊需求       | 无                                                           |
+
+### 4.6.2 功能2-学者实体排序
+
+### 
+
+| 用例编号       | UC1-1                                                        |
+| -------------- | ------------------------------------------------------------ |
+| 名称           | 数据初始化                                                   |
+| 创建者         | 丁玲燕                                                       |
+| 创建日期       | 2020-03-07                                                   |
+| 最后一次更新者 | 丁玲燕                                                       |
+| 更新日期       | 2020-03-07                                                   |
+| 参与者         | 管理员                                                       |
+| 触发条件       | 进入管理员界面                                               |
+| 前置条件       | 无                                                           |
+| 后置条件       | 无                                                           |
+| 优先级         | 高                                                           |
+| 正常流程       | 1. 管理员进入管理员界面<br />2. 管理员选择初始化数据<br />3. 系统进行数据的初始化 |
+| 扩展流程       | 无                                                           |
+| 特殊需求       | 无                                                           |
+
+### 4.6.3 功能3-机构实体排序
+
+### 
+
+| 用例编号       | UC1-1                                                        |
+| -------------- | ------------------------------------------------------------ |
+| 名称           | 数据初始化                                                   |
+| 创建者         | 丁玲燕                                                       |
+| 创建日期       | 2020-03-07                                                   |
+| 最后一次更新者 | 丁玲燕                                                       |
+| 更新日期       | 2020-03-07                                                   |
+| 参与者         | 管理员                                                       |
+| 触发条件       | 进入管理员界面                                               |
+| 前置条件       | 无                                                           |
+| 后置条件       | 无                                                           |
+| 优先级         | 高                                                           |
+| 正常流程       | 1. 管理员进入管理员界面<br />2. 管理员选择初始化数据<br />3. 系统进行数据的初始化 |
+| 扩展流程       | 无                                                           |
+| 特殊需求       | 无                                                           |
+
+### 4.6.4 功能4-会议实体排序
+
+### 
+
+| 用例编号       | UC1-1                                                        |
+| -------------- | ------------------------------------------------------------ |
+| 名称           | 数据初始化                                                   |
+| 创建者         | 丁玲燕                                                       |
+| 创建日期       | 2020-03-07                                                   |
+| 最后一次更新者 | 丁玲燕                                                       |
+| 更新日期       | 2020-03-07                                                   |
+| 参与者         | 管理员                                                       |
+| 触发条件       | 进入管理员界面                                               |
+| 前置条件       | 无                                                           |
+| 后置条件       | 无                                                           |
+| 优先级         | 高                                                           |
+| 正常流程       | 1. 管理员进入管理员界面<br />2. 管理员选择初始化数据<br />3. 系统进行数据的初始化 |
+| 扩展流程       | 无                                                           |
+| 特殊需求       | 无                                                           |
+
 #  **5  接口需求**
 
 ## **5.1  系统接口**
