--- a/Iteration_2/需求规格说明书.md
+++ b/Iteration_2/需求规格说明书.md
@@ -204,27 +204,25 @@ OASIS: （Online grAph System for acdemIcS）学术关系图谱系统
 
 ### 4.5.1 功能1-领域画像
 
-### 
-
-| 用例编号       | UC1-1                                                        |
+| 用例编号       | UC4-1                                                        |
 | -------------- | ------------------------------------------------------------ |
-| 名称           | 数据初始化                                                   |
-| 创建者         | 丁玲燕                                                       |
-| 创建日期       | 2020-03-07                                                   |
-| 最后一次更新者 | 丁玲燕                                                       |
-| 更新日期       | 2020-03-07                                                   |
-| 参与者         | 管理员                                                       |
-| 触发条件       | 进入管理员界面                                               |
+| 名称           | 领域画像                                                     |
+| 创建者         | 濮宗悦                                                       |
+| 创建日期       | 2020-03-13                                                   |
+| 最后一次更新者 | 濮宗悦                                                       |
+| 更新日期       | 2020-03-13                                                   |
+| 参与者         | 普通用户                                                     |
+| 触发条件       | 无                                                           |
 | 前置条件       | 无                                                           |
 | 后置条件       | 无                                                           |
 | 优先级         | 高                                                           |
-| 正常流程       | 1. 管理员进入管理员界面<br />2. 管理员选择初始化数据<br />3. 系统进行数据的初始化 |
+| 正常流程       | 系统跳转至该领域，展示：<br />1. 领域基本信息：名称、简介、发表论文数、活跃度<br /> 2. 近5年论文数、被引用数、H-index、活跃度、热度（总被引用数/发表论文总数）指数统计图。<br />3. 与此领域相关的领域。<br />4. 展示top作者、top论文和top会议，按照活跃度的排序 |
 | 扩展流程       | 无                                                           |
 | 特殊需求       | 无                                                           |
 
 ### 4.5.2 功能2-学者画像
 
-### 
+
 
 | 用例编号       | UC1-1                                                        |
 | -------------- | ------------------------------------------------------------ |
@@ -286,21 +284,19 @@ OASIS: （Online grAph System for acdemIcS）学术关系图谱系统
 
 ### 4.6.1 功能1-领域实体排序
 
-### 
-
-| 用例编号       | UC1-1                                                        |
+| 用例编号       | UC5-1                                                        |
 | -------------- | ------------------------------------------------------------ |
-| 名称           | 数据初始化                                                   |
-| 创建者         | 丁玲燕                                                       |
-| 创建日期       | 2020-03-07                                                   |
-| 最后一次更新者 | 丁玲燕                                                       |
-| 更新日期       | 2020-03-07                                                   |
-| 参与者         | 管理员                                                       |
-| 触发条件       | 进入管理员界面                                               |
+| 名称           | 领域实体排序                                                 |
+| 创建者         | 濮宗悦                                                       |
+| 创建日期       | 2020-03-13                                                   |
+| 最后一次更新者 | 濮宗悦                                                       |
+| 更新日期       | 2020-03-13                                                   |
+| 参与者         | 普通用户                                                     |
+| 触发条件       | 无                                                           |
 | 前置条件       | 无                                                           |
 | 后置条件       | 无                                                           |
 | 优先级         | 高                                                           |
-| 正常流程       | 1. 管理员进入管理员界面<br />2. 管理员选择初始化数据<br />3. 系统进行数据的初始化 |
+| 正常流程       | 1.领域排序默认方法为活跃度，可以改为论文总数、总被引数、研究人员数、热度。2.  在本页可以按照名称搜索领域。 |
 | 扩展流程       | 无                                                           |
 | 特殊需求       | 无                                                           |
 
