--- a/Iteration_2/需求规格说明书.md
+++ b/Iteration_2/需求规格说明书.md
@@ -288,7 +288,7 @@ OASIS: （Online grAph System for acdemIcS）学术关系图谱系统
 | 最后一次更新者 | 濮宗悦                                                       |
 | 更新日期       | 2020-03-13                                                   |
 | 参与者         | 普通用户                                                     |
-| 触发条件       | 无                                                           |
+| 触发条件       | 用户进入首页                                                 |
 | 前置条件       | 无                                                           |
 | 后置条件       | 无                                                           |
 | 优先级         | 高                                                           |
@@ -297,8 +297,6 @@ OASIS: （Online grAph System for acdemIcS）学术关系图谱系统
 | 特殊需求       | 无                                                           |
 
 ### 4.6.2 功能2-学者实体排序
-
-### 
 
 | 用例编号       | UC1-1                                                        |
 | -------------- | ------------------------------------------------------------ |
@@ -318,41 +316,37 @@ OASIS: （Online grAph System for acdemIcS）学术关系图谱系统
 
 ### 4.6.3 功能3-机构实体排序
 
-### 
-
-| 用例编号       | UC1-1                                                        |
+| 用例编号       | UC5-3                                                        |
 | -------------- | ------------------------------------------------------------ |
-| 名称           | 数据初始化                                                   |
+| 名称           | 机构实体排序                                                 |
 | 创建者         | 丁玲燕                                                       |
-| 创建日期       | 2020-03-07                                                   |
+| 创建日期       | 2020-03-13                                                   |
 | 最后一次更新者 | 丁玲燕                                                       |
-| 更新日期       | 2020-03-07                                                   |
-| 参与者         | 管理员                                                       |
-| 触发条件       | 进入管理员界面                                               |
+| 更新日期       | 2020-03-13                                                   |
+| 参与者         | 普通用户                                                     |
+| 触发条件       | 用户进入首页                                                 |
 | 前置条件       | 无                                                           |
 | 后置条件       | 无                                                           |
 | 优先级         | 高                                                           |
-| 正常流程       | 1. 管理员进入管理员界面<br />2. 管理员选择初始化数据<br />3. 系统进行数据的初始化 |
+| 正常流程       | 1.领域排序默认方法为活跃度，可以改为论文总数、总被引数、研究人员数、热度<br />2.  在本页可以按照名称搜索领域 |
 | 扩展流程       | 无                                                           |
 | 特殊需求       | 无                                                           |
 
 ### 4.6.4 功能4-会议实体排序
 
-### 
-
-| 用例编号       | UC1-1                                                        |
+| 用例编号       | UC5-4                                                        |
 | -------------- | ------------------------------------------------------------ |
-| 名称           | 数据初始化                                                   |
+| 名称           | 会议实体排序                                                 |
 | 创建者         | 丁玲燕                                                       |
-| 创建日期       | 2020-03-07                                                   |
+| 创建日期       | 2020-03-13                                                   |
 | 最后一次更新者 | 丁玲燕                                                       |
-| 更新日期       | 2020-03-07                                                   |
-| 参与者         | 管理员                                                       |
-| 触发条件       | 进入管理员界面                                               |
+| 更新日期       | 2020-03-13                                                   |
+| 参与者         | 普通用户                                                     |
+| 触发条件       | 用户进入首页                                                 |
 | 前置条件       | 无                                                           |
 | 后置条件       | 无                                                           |
 | 优先级         | 高                                                           |
-| 正常流程       | 1. 管理员进入管理员界面<br />2. 管理员选择初始化数据<br />3. 系统进行数据的初始化 |
+| 正常流程       | 1.领域排序默认方法为活跃度，可以改为论文总数、总被引数、研究人员数、热度<br />2.  在本页可以按照名称搜索领域 |
 | 扩展流程       | 无                                                           |
 | 特殊需求       | 无                                                           |
 
