update: it2用例细化

--- a/Iteration_2/需求规格说明书.md
+++ b/Iteration_2/需求规格说明书.md
@@ -6,11 +6,13 @@
 
  文档修订记录
 
-| 版本编号 | 日期      | 参与人员               | 修改内容           | 备注 |
-| -------- | --------- | ---------------------- | ------------------ | ---- |
-| V0.1     | 2020.2.18 | 濮宗悦、丁玲燕、王雪君 | 构建草稿           | 无   |
-| V0.2     | 2020.2.29 | 陆放明                 | 补充接口           |      |
-| v0.3     | 2020.3.7  | 丁玲燕                 | 增加数据初始化需求 |      |
+| 版本编号 | 日期      | 参与人员                       | 修改内容           | 备注 |
+| -------- | --------- | ------------------------------ | ------------------ | ---- |
+| V0.1     | 2020.2.18 | 濮宗悦、丁玲燕、王雪君         | 构建草稿           | 无   |
+| V0.2     | 2020.2.29 | 陆放明                         | 补充接口           |      |
+| v0.3     | 2020.3.7  | 丁玲燕                         | 增加数据初始化需求 |      |
+| v0.4     | 2020.3.14 | 濮宗悦、丁玲燕、王雪君         | 增加迭代二用例     |      |
+| v0.5     | 2020.3.16 | 陆放明、濮宗悦、丁玲燕、王雪君 | 细化迭代二用例     |      |
 
 # **1  引言**
 
@@ -210,13 +212,13 @@ OASIS: （Online grAph System for acdemIcS）学术关系图谱系统
 | 创建者         | 濮宗悦                                                       |
 | 创建日期       | 2020-03-13                                                   |
 | 最后一次更新者 | 濮宗悦                                                       |
-| 更新日期       | 2020-03-13                                                   |
+| 更新日期       | 2020-03-16                                                   |
 | 参与者         | 普通用户                                                     |
-| 触发条件       | 无                                                           |
+| 触发条件       | 用户点击某个领域词条。                                       |
 | 前置条件       | 无                                                           |
 | 后置条件       | 无                                                           |
 | 优先级         | 高                                                           |
-| 正常流程       | 系统跳转至该领域，展示：<br />1. 领域基本信息：名称、简介、发表论文数、活跃度<br /> 2. 近5年论文数、被引用数、H-index、活跃度、热度（总被引用数/发表论文总数）指数统计图。<br />3. 与此领域相关的领域。<br />4. 展示top作者、top论文和top会议，按照活跃度的排序 |
+| 正常流程       | 系统跳转至该领域词条页面，展示：<br />1. 领域的基本信息：名称、简介、发表论文数、活跃度<br /> 2. 近5年论文数、被引用数、H-index、活跃度、热度（总被引用数/发表论文总数）指数统计图。<br />3. 与此领域相关的领域（词云形式展示）。<br />3.1 包含词与相应的活跃度。<br />4. top作者、top论文和top会议，按照活跃度的排序。<br />4.1 作者需包含其姓名、论文数和被引数目<br />4.2 论文需包含其标题、被引用数。<br />4.3 会议需包含其名称、论文数和被引用数。 |
 | 扩展流程       | 1.1 活跃度：paper数的和（以3年为周期，每向前3年paper数除以Math.ceiling（今年-当年年份/3）） |
 | 特殊需求       | 无                                                           |
 
@@ -234,7 +236,7 @@ OASIS: （Online grAph System for acdemIcS）学术关系图谱系统
 | 前置条件       | 无                                                           |
 | 后置条件       | 无                                                           |
 | 优先级         | 高                                                           |
-| 正常流程       | 系统跳转至该学者主页，展示：<br/>1. 领域基本信息：姓名、简介、所属机构，发表paper数、被引用数，活跃度，领域。<br/>2. 近5年paper、被引、H-index、活跃度、热度指数统计图。<br/>3. 学者之间合作关系<br/>4.相关领域图。<br/>5. top论文按照活跃度排序。 |
+| 正常流程       | 系统跳转至该学者主页，展示：<br/>1. 学者基本信息：姓名、简介、所属机构，发表paper数、被引用数，活跃度，领域。<br/>2. 近5年paper数、被引、H-index、活跃度、热度指数统计图。<br/>3. 学者之间合作关系<br />3.1 散点图，按照活跃度表示点的大小。<br />3.2 合作相同论文的作者同色。<br />4. top论文<br />4.1 按照活跃度排序。 |
 | 扩展流程       | 无                                                           |
 | 特殊需求       | 无                                                           |
 
@@ -252,9 +254,9 @@ OASIS: （Online grAph System for acdemIcS）学术关系图谱系统
 | 前置条件       | 无                                                           |
 | 后置条件       | 无                                                           |
 | 优先级         | 高                                                           |
-| 正常流程       | 系统跳转至该研究机构主页，展示：<br />1. 研究机构基本信息：名称、简介、现有研究人员数、发表paper数、总被引用数、活跃度<br />2. 近5年paper、被引、H-index、活跃度、热度指数统计图<br />3. 主要学术方向饼图，主要方向前五中重要学者<br />4. 研究机构关系图，合作关系密切的研究机构及合作的方向。采取散点图，图之间关系为主要合作研究方向，权重为论文数<br />5. top作者和top论文，按照活跃度排序 |
-| 扩展流程       | 3<br />3.1 重要学者：可以按被引数、H-index或paper数，或者三者按照442比例加权排序<br />3.2 重要学者列出前10<br />3.3 学者包含其研究方向可以选择时间范围点图或饼图、近5年论文发表情况柱状图 |
-| 特殊需求       | 1. 作者名称和研究方向点击进入详情                            |
+| 正常流程       | 系统跳转至该研究机构主页，展示：<br />1. 研究机构基本信息：名称、简介、现有研究人员数、发表paper数、总被引用数、活跃度<br />2. 近5年paper、被引、H-index、活跃度、热度指数统计图<br />3. 主要学术方向饼图，主要方向前五中重要学者<br /><br />3.1 重要学者：可以按被引数、H-index或paper数，或者三者按照442比例加权排序。<br />3.2 重要学者列出前5<br />3.3 每个学者包含其近5年论文发表情况柱状图<br />4. 研究机构关系图，合作关系密切的研究机构及合作的方向。<br />4.1 采取散点图，图之间关系为主要合作研究方向，权重为论文数<br />5. top作者和top论文<br />5.1 按照活跃度排序。 |
+| 扩展流程       |                                                              |
+| 特殊需求       | 1. 作者名称和研究方向可以点击进入详情画像                    |
 
 ### 4.5.4 功能4-会议画像
 
@@ -270,7 +272,7 @@ OASIS: （Online grAph System for acdemIcS）学术关系图谱系统
 | 前置条件       | 无                                                           |
 | 后置条件       | 无                                                           |
 | 优先级         | 高                                                           |
-| 正常流程       | 系统跳转至该会议主页，展示：<br />1. 会议基本信息：名称、简介、近五年会议的时间以及对应的发表paper数、H-index、总被引用数、活跃度<br />2. 近5年paper、被引、H-index、活跃度、热度指数统计图<br />3. 主要学术方向饼图<br />4. 会议中发表的论文列表 |
+| 正常流程       | 系统跳转至该会议主页，展示：<br />1. 会议基本信息：名称、简介、近五年会议的时间以及对应的发表paper数、H-index、总被引用数、活跃度<br />2. 近5年paper、被引、H-index、活跃度、热度指数统计图<br />3. 主要学术方向饼图<br />3.1 包含学术方向词条及该学术方向在该会议中的热度。<br />4. 会议中发表的论文列表。 |
 | 扩展流程       | 无                                                           |
 | 特殊需求       | 无                                                           |
 
@@ -286,11 +288,11 @@ OASIS: （Online grAph System for acdemIcS）学术关系图谱系统
 | 最后一次更新者 | 濮宗悦                                                       |
 | 更新日期       | 2020-03-13                                                   |
 | 参与者         | 普通用户                                                     |
-| 触发条件       | 用户进入首页                                                 |
+| 触发条件       | 用户进入领域排序界面。                                       |
 | 前置条件       | 无                                                           |
 | 后置条件       | 无                                                           |
 | 优先级         | 高                                                           |
-| 正常流程       | 1.领域排序默认方法为活跃度，可以改为论文总数、总被引数、研究人员数、热度。2.  在本页可以按照名称搜索领域。 |
+| 正常流程       | 1. 领域排序默认方法为活跃度，可以改为论文总数、总被引数、研究人员数、热度。<br />2.  在本页可以按照名称搜索领域。 |
 | 扩展流程       | 无                                                           |
 | 特殊需求       | 无                                                           |
 
@@ -304,7 +306,7 @@ OASIS: （Online grAph System for acdemIcS）学术关系图谱系统
 | 最后一次更新者 | 王雪君                                                       |
 | 更新日期       | 2020-03-13                                                   |
 | 参与者         | 普通用户                                                     |
-| 触发条件       | 用户进入首页                                                 |
+| 触发条件       | 用户进入学者排序界面。                                       |
 | 前置条件       | 无                                                           |
 | 后置条件       | 无                                                           |
 | 优先级         | 高                                                           |
@@ -322,11 +324,11 @@ OASIS: （Online grAph System for acdemIcS）学术关系图谱系统
 | 最后一次更新者 | 丁玲燕                                                       |
 | 更新日期       | 2020-03-13                                                   |
 | 参与者         | 普通用户                                                     |
-| 触发条件       | 用户进入首页                                                 |
+| 触发条件       | 用户进入机构排序界面。                                       |
 | 前置条件       | 无                                                           |
 | 后置条件       | 无                                                           |
 | 优先级         | 高                                                           |
-| 正常流程       | 1.领域排序默认方法为活跃度，可以改为论文总数、总被引数、研究人员数、热度<br />2.  在本页可以按照名称搜索领域 |
+| 正常流程       | 1.机构排序默认方法为活跃度，可以改为论文总数、总被引数、研究人员数、热度<br />2.  在本页可以按照名称搜索领域 |
 | 扩展流程       | 无                                                           |
 | 特殊需求       | 无                                                           |
 
@@ -340,11 +342,11 @@ OASIS: （Online grAph System for acdemIcS）学术关系图谱系统
 | 最后一次更新者 | 丁玲燕                                                       |
 | 更新日期       | 2020-03-13                                                   |
 | 参与者         | 普通用户                                                     |
-| 触发条件       | 用户进入首页                                                 |
+| 触发条件       | 用户进入会议排序界面。                                       |
 | 前置条件       | 无                                                           |
 | 后置条件       | 无                                                           |
 | 优先级         | 高                                                           |
-| 正常流程       | 1.领域排序默认方法为活跃度，可以改为论文总数、总被引数、研究人员数、热度<br />2.  在本页可以按照名称搜索领域 |
+| 正常流程       | 1.会议排序默认方法为活跃度，可以改为论文总数、总被引数、研究人员数、热度<br />2.  在本页可以按照名称搜索会议 |
 | 扩展流程       | 无                                                           |
 | 特殊需求       | 无                                                           |
 
